# metaphone3-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: basic.rs  bench.rs
lib/: go.mod  libmetaphone3.h  metaphone3.go
src/: lib.rs  main.rs  tests.rs
