[package]
name = "metaphone3"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Metaphone3 phonetic algorithm"
repository = "https://github.com/kakserpom/metaphone3-rs"

[dependencies]
smartstring = "1.0.1"
[dev-dependencies]
csv = "1.4.0"

[profile.release]
lto = true
codegen-units = 1
